[tool.poetry]
name = "geometallurgy"
packages = [{ include = "elphick/geomet" }]
version = "0.1.0"
description = ""
authors = ["Greg <11791585+elphick@users.noreply.github.com>"]
repository = "https://github.com/elphick/geometallurgy"
documentation = "https://elphick.github.io/geometallurgy"
readme = "README.md"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
plotly = "^5.22.0"
omfvista = "^0.3.0"
pandas = "^2.2.2"
fastparquet = "^2024.5.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
sphinx = "^7.3.7"
sphinx-gallery = "^0.16.0"
sphinx-rtd-theme = "^2.0.0"
ydata-profiling = "^4.8.3"
myst-parser = "^3.0.1"
sphinx-autodoc-typehints = "^2.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
